k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-wiki-ingress
  namespace: wiki
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: PLACEHOLDER_HOST
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: public-wiki
            port:
              number: 80
